# financial-analyst

./: README.md  pyproject-old.toml  pyproject.toml  test.py  training_data.pkl
src/financial_agent_investment_recommendation_chat/: crew.py  main.py
src/financial_agent_investment_recommendation_chat/config/: agents.yaml  tasks.yaml
