[project]
name = "financial_agent_investment_recommendation_chat"
version = "0.1.0"
description = "financial_agent_investment_recommendation_chat using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
financial_agent_investment_recommendation_chat = "financial_agent_investment_recommendation_chat.main:run"
run_crew = "financial_agent_investment_recommendation_chat.main:run"
train = "financial_agent_investment_recommendation_chat.main:train"
replay = "financial_agent_investment_recommendation_chat.main:replay"
test = "financial_agent_investment_recommendation_chat.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
